# CyberCat

./: .env.example  .gitignore  .postcssrc.json  .prettierrc  README.md  README.zh-CN.md  RELEASE.md  RELEASE.zh-CN.md  eslint.config.mjs  get_the_global_selected_text.js  nx.json  package-lock.json  package.json  play_audio.js  pyproject.toml  tsconfig.base.json  tsconfig.json  z.md  z.ts
.github/instructions/: global.instructions.md  service.instructions.md  web-ui.instructions.md  web.instructions.md
.github/skills/cybercat-workflow/: SKILL.md
.github/skills/cybercat-workflow/references/: project-map.md  validation.md
apps/chatbot/: eslint.config.mjs  package.json  webpack.config.js
apps/chatbot/src/: index.html  main.tsx  styles.css
apps/chatbot/src/pages/: App.tsx  backendShared.ts  fileIngestTargets.ts
apps/service/: CyberCat.spec  package.json  tsconfig.app.json
apps/service/src/: main.py  main.ts  pronounce_service.py  type.d.ts
apps/service/src/assets/: selection-assistant.prompt.md
apps/service/src/constants/: tts.py
apps/service/src/prompts/: Creative.md  Default.md  FileIngest.md  LangAss.md  Professional.md
apps/web/: package.json  webpack.config.js
apps/web/src/: index.html  styles.css
commands/xgd/: autodl-command2run-remote-bashrc.bash  qwen-chat-llm-test.bash  qwen-chat-omni-test.bash  qwen-embed-test.bash  qwen-rerank-test.bash
commands/zixiCat/: copy-command2run-remote-bashrc.bash
installer/: CyberCat.iss
prompts/: translation.md
scripts/windows/: build-installer.mjs  build_installer.py  release.py
(+107 files in other folders)
